# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")

group("ability_runtime") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "actsabilitystartselfulabilitytest:ActsAbilityStartSelfulAbilityTest",
      "aacommand:aacommand",
      "abilitybase:abilitybase",
      "abilitybaseerrorcode:abilitybaseerrorcode",
      "abilitycapitest:abilitycapitest",
      "abilitygetstartparameterstest:abilitygetstartparameterstest",
      "abilitylifecycle:abilitylifecycletest",
      "abilitymanager:actsabilitymanagertest",
      "abilitymonitorstatic:ActsAbilityMonitorStaticTest",
      "abilitymontior:ActsAbilityMonitorTest",
      "abilitymultiinstance:abilitymultiinstance",
      "abilitystagecontextteststatic:AbilityStageContextStaticTest",
      "abilitystagemonitor:abilitystagemonitor",
      "abilitytoolabilitydelegatortest:abilitytoolabilitydelegatortest",
      "abilitytoolabilitydelegatorteststatic:ActsAbilityToolAbilityDelegatorStaticTest",
      "actlaunchandlatestparameter:getlaunchandlatestparameteracttest",
      "actsSetMissionWindowIconTest:ActsSetMissionWindowIconTest",
      "actsNotificationWantAgentTest:ActsNotificationWantAgentTest",
      "actsNotificationWantAgentTestStatic:ActsNotificationWantAgentStaticTest",
      "actsaaappdebugtest:actsaaappdebugtest",
      "actsaappserviceextensioncontexttest:ActsAAppServiceExtensionContextTest",
      "actsaastartabilitytest:actsaastartabilitytest",
      "actsabilityamstest:ActsAbilityAmsTest",
      "actsabilityapplicationteststatic:ActsAbilityApplicationStaticTest",
      "actsabilitydelegatorcase:ActsAbilityDelegatorCaseTest",
      "actsabilityerrcodequery:actsabilityerrcodequery",
      "actsabilityerrcodequerywithoutpertest:ActsAbilityErrCodeQueryWithoutPerTest",
      "actsabilityerrorcodeteststatic:ActsAbilityErrorCodeStaticTest",
      "actsabilitymanageretstest:ActsAbilityManagerEtsTest",
      "actsabilityrecoverytest:actsabilityrecoverytest",
      "actsabilitytooltest:actsabilitytooltest",
      "actsabilityusertest:ActsAbilityuserTest",
      "actsabilitywmstest:ActsAbilityWMSTest",
      "actsactionextensionability:actsactionextensionability",
      "actsamstest:actsamstest",
      "actsapplicationcontext:ActsChainApplicationContext",
      "actsautofilltest:actsautofilltest",
      "actscalldataabilitytest:ActsCallDataAbilityTest",
      "actscallerinfotest:actscallerinfotest",
      "actscalltest:actscalltest",
      "actschildprocessmanager:actschildprocessmanagertest",
      "actscleantemptest:cleantempfiles",
      "actscollaborateresulttest:actscollaborateresulttest",
      "actscollaborateresultteststatic:actscollaborateresultstatictest",
      "actscompletionhandlertest:actscompletionhandlertest",
      "actscontextmonitor:ActsContextMonitorTest",
      "actscreatebundlecontexttest:ActsCreateBundleContextTest",
      "actscreatedisplaycontexttest:actscreatedisplaycontexttest",
      "actscrosscall:actscrosscall",
      "actsdataabilityaccessdatasharetest:dataabilityaccessdatashare",
      "actsdelegatorfaabilitytest:ActsDelegatorFAAbilityTest",
      "actssetmissionwindowiconteststatic:ActsSetMissionWindowIconTestStatic",
      "actsfaabilitydisplayorientationtest:ActsFAAbilityDisplayOrientationTest",
      "actsfwkdataaccessortest:dataability",
      "actsgetapplicationnewtest:ActsGetApplicationNewTest",
      "actsgetwantagentwithuseridtest:ActsGetwantagentWithUseridTest",
      "actsintent:actsintent",
      "actsjsdataabilitytest:ActsJsDataAbilityTest",
      "actskioskmanagertest:ActsKioskManagerTest",
      "actslastexitreason:actslastexitreason",
      "actslifecycle:actslifecycle",
      "actsmultiplecall:actsmultiplecall",
      "actsnfcselecttypes:actsnfcselecttypes",
      "actsondestroytest:actsondestroytest",
      "actsopenlinknopermissionteststatic:actsopenlinknopermissionStaticTest",
      "actsopenlinktest:actsopenlinktest",
      "actsopenlinktestrelystatic:actsopenlinkRelyStaticTest",
      "actsopenlinkteststatic:actsopenlinkStaticTest",
      "actsparsingparameterstest:actsparsingparameterstest",
      "actsphotoeditorextensiontest:ActsPhotoEditorExtensionTest",
      "actsphotoeditorextensionteststatic:ActsPhotoEditorextEnsionStaticTest",
      "actsqueryfunctiontest:actsqueryfunctiontest",
      "actsrequestdialogtest:actsrequestdialogtest",
      "actsrestartapptest:ActsRestartAppTest",
      "actsrevokequickfixtest:ActsRevokeQuickFixApp",
      "actssandboxcontexttest:ActsSandboxContextTest",
      "actsserviceabilityclienttest:serviceability",
      "actssetfontsize:ActsSetFontSize",
      "actssetfontsizetest:ActsSetFontSizeTest",
      "actssetfonttest:ActsSetFontTest",
      "actsshareacquiresharedata:ActsShareAcquireShareData",
      "actsshellcommandfunctionalitytest:actsshellcommandfunctionalitytest",
      "actsspecifiedprocess:actsspecifiedprocess",
      "actsspecifiedprocessstatic:actsspecifiedprocessstatic",
      "actsstartAndTerminatetest:ActsStartAndTerminate",
      "actsstartabilityforresult:actsstartabilityforresulttest",
      "actsstartselfuiabilityteststatic:actsStartSelfUIAbilityStaticTest",
      "actsstartabilitygetdisplayidtest:actsstartabilitygetdisplayidtest",
      "actsstartabilityinnewprocesstest:actsstartabilityinnewprocesstest",
      "actsstartabilitywantparamtest:ActsStartAbilityWantParamTest",
      "actsstartmanager:ActsStartManager",
      "actsstartrunnertest:ActsStartRunnerTest",
      "actsstartuiserviceextensiontest:ActsStartuiServiceExtension",
      "actsstartupruleoptimizetest:actsstartupruleoptimizetest",
      "actsstserviceabilityclientcase:ActsStServiceAbilityClientCaseTest",
      "actssupportfunction:actssupportfunction",
      "actssystemapitest:ActsSystemAPITest",
      "actssystemapitestappmanager:ActsSystemApiAppManagerTest",
      "actssystemapiteststatic:ActsSystemAPIStaticTest",
      "actsturipermisssiontest:actsturipermisssiontest",
      "actsuiabilitycontext:actsuiabilitycontext",
      "actsuiextensionexitreason:actsuiextensionexitreason",
      "actsuiextensionforresulttest:actsuiextensionforresulttest",
      "actsuiextensiontest:actsuiextensiontest",
      "actsuiextforresultascallertest:actsuiextforresultascallertest",
      "actsusers:actsusers",
      "actswindowrangelimittest:actswindowrangelimittest",
      "amscontextualinforquery:amscontextualinforquery",
      "amsdatauriutils:ActsAmsDataUriUtilsTest",
      "amsdatauriutilsstatic:AmsDataUriUtilsStaticTest",
      "amsdisplayIdtest:amsdisplayIdtest",
      "amsgetabilityprocessinfo:amsgetabilityprocessinfo",
      "apicover:apicover",
      "apitest:ActsApiTest",
      "appclone:appclonetest",
      "capiabilityruntime:ActsCapiAbilityRuntimeTest",
      "capichildprocess:ActsCapiChildProcessTest",
      "context:context",
      "contextprocessname:contextprocessname",
      "fa:fa",
      "faapicover:faapicover",
      "featureability:featureability",
      "freeinstalltest:freeinstalltest",
      "getresourcedirndk:getresourcedirndktest",
      "newwant:newwant",
      "registerjserror:registerjserror",
      "shareextensionability:actsshareextensionability",
      "stage:stage",
      "startabilitytest:startabilitytest",
      "startup:startup",
      "stopserviceextension:stopserviceextension",
      "uiabilitycontext:uiabilitycontext",
      "want:want",
      "wantagent:wantagent",
      "workercontextcover:workercontextcover",
      "actsGetAllWindowStagesTest:ActsGetAllWindowStagesTest",
    ]
  }
}
