# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

group("appaccount_hap") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "actsaccountoperatetest:ActsAccountOperateTest",
      "actsaccountoperateteststatic:ActsAccountOperateStaticTest",
      "actsaccounttest:ActsAccountTest",
      "actsaccounttstest:ActsAccountTsTest",
      "actsaccounttsteststatic:ActsAccountTsStaticTest",
      "actsgetaccountsbyowner:ActsGetAccountsByOwnerTest",
      "actsgetaccountsbyownerstatic:ActsGetAccountsByOwnerStaticTest",
      "actsgetallaccounts:ActsGetAllAccountsTest",
      "actssetcheckdatasyncenable:ActsSetCheckDataSyncEnableTest",
      "actssetcheckdatasyncenablestatic:ActsSetCheckDataSyncEnableStaticTest",
      "actssetchecksyncenable:ActsSetCheckSyncEnableTest",
      "getallaccounts:getallaccounts",
      "sceneProject:appaccount_scene",
    ]
  }
}
