# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")

group("ActsArktsModuleNormalizedTest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "basic_scenario:module_normalized_basic_scenario_test",
      "dynamic_load:module_normalized_dynamic_load_test",
      "execute_promise_after_module_load:module_normalized_execute_promise_test",
      "exporttest:module_normalized_export_test",
      "lazy_load:module_normalized_lazy_load_test",
      "napi_load:module_normalized_napi_load_test",
      "static_load:module_normalized_static_load_test",
      "worker_path_load:module_normalized_worker_path_load_test",
    ]
  }
}
