# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/arkui/ace_engine/ace_config.gni")

group("componentAttrssTest") {
  testonly = true
  if (is_standard_system) {
    if (ace_engine_feature_wearable) {
      deps = [
        "ace_ets_component_common_attrss_alignRules:ActsAceEtsComponentCommonAttrsAlignRulesTest",
        "ace_ets_component_common_attrss_alignRules02:ActsAceEtsComponentCommonAttrsAlignRules02Test",
        "ace_ets_component_common_attrss_aspectRatio:ActsAceEtsComponentCommonAttrsAspectRadioTest",
        "ace_ets_component_common_attrss_constraintSize:ActsAceEtsComponentCommonAttrsConstraintSizeTest",
        "ace_ets_component_common_attrss_default:ActsAceEtsComponentCommonAttrsDefaultTest",
        "ace_ets_component_common_attrss_defaultFocus:ActsAceEtsComponentCommonAttrsdefaultFocusTest",
        "ace_ets_component_common_attrss_displayPriority:ActsAceEtsComponentCommondisplayPriorityTest",
        "ace_ets_component_common_attrss_flex001:ActsAceEtsComponentCommonflex001Test",
        "ace_ets_component_common_attrss_flex002:ActsAceEtsComponentCommonflex002Test",
        "ace_ets_component_common_attrss_flex003:ActsAceEtsComponentCommonflex003Test",
        "ace_ets_component_common_attrss_flex004:ActsAceEtsComponentCommonflex004Test",
        "ace_ets_component_common_attrss_flex005:ActsAceEtsComponentCommonflex005Test",
        "ace_ets_component_common_attrss_flex006:ActsAceEtsComponentCommonflex006Test",
        "ace_ets_component_common_attrss_flex_three:ActsAceEtsComponentCommonflexThreeTest",
        "ace_ets_component_common_attrss_flex_three01:ActsAceEtsComponentCommonflexThree01Test",
        "ace_ets_component_common_attrss_flex_two:ActsAceEtsComponentCommonflexTwoTest",
        "ace_ets_component_common_attrss_flex_two01:ActsAceEtsComponentCommonflexTwo01Test",
        "ace_ets_component_common_attrss_focusControl:ActsAceEtsComponentCommonAttrsFocusControlTest",
        "ace_ets_component_common_attrss_focusOnTouch:ActsAceEtsComponentCommonAttrsFocusOnTouchTest",
        "ace_ets_component_common_attrss_focusable:ActsAceEtsComponentCommonfocusableTest",
        "ace_ets_component_common_attrss_focusableDefault:ActsAceEtsComponentCommonAttrsFocusableDefaultTest",
        "ace_ets_component_common_attrss_gridOffset:ActsAceEtsComponentCommonAttrsGridOffsetTest",
        "ace_ets_component_common_attrss_gridSpan:ActsAceEtsComponentCommonAttrsGridSpanTest",
        "ace_ets_component_common_attrss_groupDefaultFocus:ActsAceEtsComponentCommonAttrsGroupDefaultFocusTest",
        "ace_ets_component_common_attrss_height:ActsAceEtsComponentCommonAttrsHeightTest",
        "ace_ets_component_common_attrss_hitTestBehavior:ActsAceEtsComponentCommonAttrsHitTestBehaviorTest",
        "ace_ets_component_common_attrss_layoutWeight:ActsAceEtsComponentCommonAttrsLayoutWeightTest",
        "ace_ets_component_common_attrss_margin:ActsAceEtsComponentCommonAttrsMarginTest",
        "ace_ets_component_common_attrss_marginLength:ActsAceEtsComponentCommonAttrsMarginLengthTest",
        "ace_ets_component_common_attrss_offset:ActsAceEtsComponentCommonAttrsOffsetTest",
        "ace_ets_component_common_attrss_onAppear:ActsAceEtsComponentCommonAttrsOnAppearTest",
        "ace_ets_component_common_attrss_onDisAppear:ActsAceEtsComponentCommonAttrsOnDisAppearTest",
        "ace_ets_component_common_attrss_onVisibleAreaChange:ActsAceEtsComponentCommonAttrsOnVisibleAreaChangeTest",
        "ace_ets_component_common_attrss_padding:ActsAceEtsComponentCommonAttrsPaddingTest",
        "ace_ets_component_common_attrss_padding_container_base:ActsAceEtsComponentCommonAttrsPaddingContainerBaseTest",
        "ace_ets_component_common_attrss_position:ActsAceEtsComponentCommonAttrsPositionTest",
        "ace_ets_component_common_attrss_responseRegion:ActsAceEtsComponentCommonAttrsResponseRegionTest",
        "ace_ets_component_common_attrss_responseRegion02:ActsAceEtsComponentCommonAttrsResponseRegion02Test",
        "ace_ets_component_common_attrss_responseRegion03:ActsAceEtsComponentCommonAttrsResponseRegion03Test",
        "ace_ets_component_common_attrss_size:ActsAceEtsComponentCommonAttrsSizeTest",
        "ace_ets_component_common_attrss_stateStyles:ActsAceEtsComponentCommonAttrsStateStylesTest",
        "ace_ets_component_common_attrss_tabIndex:ActsAceEtsComponentCommonAttrsTabIndexTest",
        "ace_ets_component_common_attrss_useSizeType:ActsAceEtsComponentCommonAttrsUseSizeTypeTest",
        "ace_ets_component_common_attrss_width:ActsAceEtsComponentCommonAttrsWidthTest",
        "ace_ets_component_common_attrss_zIndex:ActsAceEtsComponentCommonAttrsZIndexTest",
        "ace_ets_component_common_attrss_margin_static:ActsAceEtsComponentCommonAttrsMarginStaticTest",
        "ace_ets_component_common_attrss_offset_static:ActsAceEtsComponentCommonAttrsOffsetStaticTest",
        "ace_ets_component_common_attrss_onAppear_static:ActsAceEtsComponentCommonAttrsOnAppearStaticTest",
        "ace_ets_component_common_attrss_size_static:ActsAceEtsComponentCommonAttrsSizeStaticTest",
        "ace_ets_component_common_attrss_stateStyles_static:ActsAceEtsComponentCommonAttrsStateStylesStaticTest",
        "ace_ets_component_common_attrss_defaultFocus_static:ActsAceEtsComponentCommonAttrsdefaultFocusStaticTest",
        "ace_ets_component_common_attrss_displayPriority_static:ActsAceEtsComponentCommondisplayPriorityStaticTest",
        "ace_ets_component_common_attrss_alignRules_static:ActsAceEtsComponentCommonAttrssAlignRulesStaticTest",
        "ace_ets_component_common_attrss_alignRules02_static:ActsAceEtsComponentCommonAttrsAlignRules02StaticTest",
        "ace_ets_component_common_attrss_aspectRatio_static:ActsAceEtsComponentCommonAttrsAspectRadioStaticTest",
        "ace_ets_component_common_attrss_constraintSize_static:ActsAceEtsComponentCommonAttrsConstraintSizeStaticTest",
        "ace_ets_component_common_attrss_default_static:ActsAceEtsComponentCommonAttrsDefaultStaticTest",
        "ace_ets_component_common_attrss_flex_three_static:ActsAceEtsComponentCommonflexThreeStaticTest",
        "ace_ets_component_common_attrss_flex_three01_static:ActsAceEtsComponentCommonflexThree01StaticTest",
        "ace_ets_component_common_attrss_flex_two_static:ActsAceEtsComponentCommonflexTwoStaticTest",
        "ace_ets_component_common_attrss_groupDefaultFocus_static:ActsAceEtsComponentCommonAttrsGroupDefaultFocusStaticTest",
        "ace_ets_component_common_attrss_height_static:ActsAceEtsComponentCommonAttrsHeightStaticTest",
        "ace_ets_component_common_attrss_flex_two01_static:ActsAceEtsComponentCommonflexTwo01StaticTest",
        "ace_ets_component_common_attrss_flex001_static:ActsAceEtsComponentCommonflex001StaticTest",
        "ace_ets_component_common_attrss_flex002_static:ActsAceEtsComponentCommonflex002StaticTest",
        "ace_ets_component_common_attrss_flex003_static:ActsAceEtsComponentCommonflex003StaticTest",
        "ace_ets_component_common_attrss_flex004_static:ActsAceEtsComponentCommonflex004StaticTest",
        "ace_ets_component_common_attrss_flex005_static:ActsAceEtsComponentCommonflex005StaticTest",
        "ace_ets_component_common_attrss_flex006_static:ActsAceEtsComponentCommonflex006StaticTest",
        "ace_ets_component_common_attrss_responseRegion_static:ActsAceEtsComponentCommonAttrsResponseRegionStaticTest",
        "ace_ets_component_common_attrss_hitTestBehavior_static:ActsAceEtsComponentCommonAttrsHitTestBehaviorStaticTest",
        "ace_ets_component_common_attrss_focusable_static:ActsAceEtsComponentCommonfocusableStaticTest",
        "ace_ets_component_common_attrss_focusableDefault_static:ActsAceEtsComponentCommonAttrsFocusableDefaultStaticTest",
        "ace_ets_component_common_attrss_focusControl_static:ActsAceEtsComponentCommonAttrsFocusControlStaticTest",
        "ace_ets_component_common_attrss_focusOnTouch_static:ActsAceEtsComponentCommonAttrsFocusOnTouchStaticTest",
        "ace_ets_component_common_attrss_layoutWeight_static:ActsAceEtsComponentCommonAttrsLayoutWeightStaticTest",
        "ace_ets_component_common_attrss_marginLength_static:ActsAceEtsComponentCommonAttrsMarginLengthStaticTest",
        "ace_ets_component_common_attrss_responseRegion02_static:ActsAceEtsComponentCommonAttrsResponseRegion02StaticTest",
        "ace_ets_component_common_attrss_responseRegion03_static:ActsAceEtsComponentCommonAttrsResponseRegion03StaticTest",
        "ace_ets_component_common_attrss_tabIndex_static:ActsAceEtsComponentCommonAttrsTabIndexStaticTest",
        "ace_ets_component_common_attrss_position_static:ActsAceEtsComponentCommonAttrsPositionStaticTest",
        "ace_ets_component_common_attrss_width_static:ActsAceEtsComponentCommonAttrsWidthStaticTest",
        "ace_ets_component_common_attrss_padding_static:ActsAceEtsComponentCommonAttrsPaddingStaticTest",
        "ace_ets_component_common_attrss_zIndex_static:ActsAceEtsComponentCommonAttrsZIndexStaticTest",
        "ace_ets_component_common_attrss_onDisAppear_static:ActsAceEtsComponentCommonAttrsOnDisAppearStaticTest",
        "ace_ets_component_common_attrss_onVisibleAreaChange_static:ActsAceEtsComponentCommonAttrsOnVisibleAreaChangeStaticTest",
      ]
    } else {
      deps = [
        "ace_ets_component_common_attrss_alignRules:ActsAceEtsComponentCommonAttrsAlignRulesTest",
        "ace_ets_component_common_attrss_alignRules02:ActsAceEtsComponentCommonAttrsAlignRules02Test",
        "ace_ets_component_common_attrss_alignRules_nowear:ActsAceEtsComponentCommonAttrsAlignRulesNowearTest",
        "ace_ets_component_common_attrss_aspectRatio:ActsAceEtsComponentCommonAttrsAspectRadioTest",
        "ace_ets_component_common_attrss_aspectRatio_nowear:ActsAceEtsComponentCommonAttrsAspectRadioNowearTest",
        "ace_ets_component_common_attrss_constraintSize:ActsAceEtsComponentCommonAttrsConstraintSizeTest",
        "ace_ets_component_common_attrss_constraintSize_nowear:ActsAceEtsComponentCommonAttrsConstraintSizeNowearTest",
        "ace_ets_component_common_attrss_default:ActsAceEtsComponentCommonAttrsDefaultTest",
        "ace_ets_component_common_attrss_defaultFocus:ActsAceEtsComponentCommonAttrsdefaultFocusTest",
        "ace_ets_component_common_attrss_defaultFocusNoWear:ActsAceEtsComponentCommonAttrsdefaultFocusNoWearTest",
        "ace_ets_component_common_attrss_default_flex01:ActsAceEtsComponentCommonAttrsDefaultFlex1Test",
        "ace_ets_component_common_attrss_default_flex02:ActsAceEtsComponentCommonAttrsDefaultFlex2Test",
        "ace_ets_component_common_attrss_default_focusValue:ActsAceEtsComponentCommonAttrsDefaultFocusValueTest",
        "ace_ets_component_common_attrss_default_nowear:ActsAceEtsComponentCommonAttrsNoWearTest",
        "ace_ets_component_common_attrss_displayPriority:ActsAceEtsComponentCommondisplayPriorityTest",
        "ace_ets_component_common_attrss_displayPriority_nowear:ActsAceEtsComponentCommondisplayPriorityNowearTest",
        "ace_ets_component_common_attrss_enabled:ActsAceEtsComponentCommonenabledTest",
        "ace_ets_component_common_attrss_flex001:ActsAceEtsComponentCommonflex001Test",
        "ace_ets_component_common_attrss_flex002:ActsAceEtsComponentCommonflex002Test",
        "ace_ets_component_common_attrss_flex003:ActsAceEtsComponentCommonflex003Test",
        "ace_ets_component_common_attrss_flex004:ActsAceEtsComponentCommonflex004Test",
        "ace_ets_component_common_attrss_flex005:ActsAceEtsComponentCommonflex005Test",
        "ace_ets_component_common_attrss_flex006:ActsAceEtsComponentCommonflex006Test",
        "ace_ets_component_common_attrss_flex_nowear:ActsAceEtsComponentCommonflexNowearTest",
        "ace_ets_component_common_attrss_flex_three:ActsAceEtsComponentCommonflexThreeTest",
        "ace_ets_component_common_attrss_flex_three01:ActsAceEtsComponentCommonflexThree01Test",
        "ace_ets_component_common_attrss_flex_three_nowear:ActsAceEtsComponentCommonflexThreeNowearTest",
        "ace_ets_component_common_attrss_flex_two:ActsAceEtsComponentCommonflexTwoTest",
        "ace_ets_component_common_attrss_flex_two01:ActsAceEtsComponentCommonflexTwo01Test",
        "ace_ets_component_common_attrss_flex_two_nowear:ActsAceEtsComponentCommonflexTwoNowearTest",
        "ace_ets_component_common_attrss_focusControl:ActsAceEtsComponentCommonAttrsFocusControlTest",
        "ace_ets_component_common_attrss_focusControlNowear:ActsAceEtsComponentCommonAttrsFocusControlNowearTest",
        "ace_ets_component_common_attrss_focusOnTouch:ActsAceEtsComponentCommonAttrsFocusOnTouchTest",
        "ace_ets_component_common_attrss_focusOnTouchNowear:ActsAceEtsComponentCommonAttrsFocusOnTouchNowearTest",
        "ace_ets_component_common_attrss_focusable:ActsAceEtsComponentCommonfocusableTest",
        "ace_ets_component_common_attrss_focusableDefault:ActsAceEtsComponentCommonAttrsFocusableDefaultTest",
        "ace_ets_component_common_attrss_focusableDefaultNowear:ActsAceEtsComponentCommonAttrsFocusableDefaultNowearTest",
        "ace_ets_component_common_attrss_focusableNowear:ActsAceEtsComponentCommonfocusableNowearTest",
        "ace_ets_component_common_attrss_gridOffset:ActsAceEtsComponentCommonAttrsGridOffsetTest",
        "ace_ets_component_common_attrss_gridOffset_nowear:ActsAceEtsComponentCommonAttrsGridOffsetNowearTest",
        "ace_ets_component_common_attrss_gridSpan:ActsAceEtsComponentCommonAttrsGridSpanTest",
        "ace_ets_component_common_attrss_gridSpan_nowear:ActsAceEtsComponentCommonAttrsGridSpanNowearTest",
        "ace_ets_component_common_attrss_groupDefaultFocus:ActsAceEtsComponentCommonAttrsGroupDefaultFocusTest",
        "ace_ets_component_common_attrss_groupDefaultFocusNowear:ActsAceEtsComponentCommonAttrsGroupDefaultFocusNowearTest",
        "ace_ets_component_common_attrss_height:ActsAceEtsComponentCommonAttrsHeightTest",
        "ace_ets_component_common_attrss_height_nowear:ActsAceEtsComponentCommonAttrsHeightNowearTest",
        "ace_ets_component_common_attrss_hitTestBehavior:ActsAceEtsComponentCommonAttrsHitTestBehaviorTest",
        "ace_ets_component_common_attrss_layoutWeight:ActsAceEtsComponentCommonAttrsLayoutWeightTest",
        "ace_ets_component_common_attrss_layoutWeight_nowear:ActsAceEtsComponentCommonAttrsLayoutWeightNowearTest",
        "ace_ets_component_common_attrss_margin:ActsAceEtsComponentCommonAttrsMarginTest",
        "ace_ets_component_common_attrss_marginLength:ActsAceEtsComponentCommonAttrsMarginLengthTest",
        "ace_ets_component_common_attrss_marginLength_nowear:ActsAceEtsComponentCommonAttrsMarginLengthNowearTest",
        "ace_ets_component_common_attrss_margin_nowear:ActsAceEtsComponentCommonAttrsMarginNowearTest",
        "ace_ets_component_common_attrss_markAnchor:ActsAceEtsComponentCommonAttrsMarkAnchorTest",
        "ace_ets_component_common_attrss_markAnchor_nowear:ActsAceEtsComponentCommonAttrsMarkAnchorNowearTest",
        "ace_ets_component_common_attrss_offset:ActsAceEtsComponentCommonAttrsOffsetTest",
        "ace_ets_component_common_attrss_offset_nowear:ActsAceEtsComponentCommonAttrsOffsetNowearTest",
        "ace_ets_component_common_attrss_onAppear:ActsAceEtsComponentCommonAttrsOnAppearTest",
        "ace_ets_component_common_attrss_onAppearNoWear:ActsAceEtsComponentCommonAttrsOnAppearNoWearTest",
        "ace_ets_component_common_attrss_onAreaChange:ActsAceEtsComponentCommonAttrsOnAreaChangeTest",
        "ace_ets_component_common_attrss_onDisAppear:ActsAceEtsComponentCommonAttrsOnDisAppearTest",
        "ace_ets_component_common_attrss_onDisAppear_nowear:ActsAceEtsComponentCommonAttrsOnDisAppearNowearTest",
        "ace_ets_component_common_attrss_onVisibleAreaChange:ActsAceEtsComponentCommonAttrsOnVisibleAreaChangeTest",
        "ace_ets_component_common_attrss_padding:ActsAceEtsComponentCommonAttrsPaddingTest",
        "ace_ets_component_common_attrss_padding_container_base:ActsAceEtsComponentCommonAttrsPaddingContainerBaseTest",
        "ace_ets_component_common_attrss_padding_nowear:ActsAceEtsComponentCommonAttrsPaddingNowearTest",
        "ace_ets_component_common_attrss_position:ActsAceEtsComponentCommonAttrsPositionTest",
        "ace_ets_component_common_attrss_position_nowear:ActsAceEtsComponentCommonAttrsPositionNowearTest",
        "ace_ets_component_common_attrss_responseRegion:ActsAceEtsComponentCommonAttrsResponseRegionTest",
        "ace_ets_component_common_attrss_responseRegion02:ActsAceEtsComponentCommonAttrsResponseRegion02Test",
        "ace_ets_component_common_attrss_responseRegion03:ActsAceEtsComponentCommonAttrsResponseRegion03Test",
        "ace_ets_component_common_attrss_responseRegion_nowear:ActsAceEtsComponentCommonAttrsResponseRegionNowearTest",
        "ace_ets_component_common_attrss_size:ActsAceEtsComponentCommonAttrsSizeTest",
        "ace_ets_component_common_attrss_size_nowear:ActsAceEtsComponentCommonAttrsSizeNowearTest",
        "ace_ets_component_common_attrss_stateStyles:ActsAceEtsComponentCommonAttrsStateStylesTest",
        "ace_ets_component_common_attrss_stateStyles_nowear:ActsAceEtsComponentCommonAttrsStateStylesNowearTest",
        "ace_ets_component_common_attrss_tabIndex:ActsAceEtsComponentCommonAttrsTabIndexTest",
        "ace_ets_component_common_attrss_tabIndex_nowear:ActsAceEtsComponentCommonAttrsTabIndexNowearTest",
        "ace_ets_component_common_attrss_touchable:ActsAceEtsComponentCommonAttrsTouchableTest",
        "ace_ets_component_common_attrss_useSizeType:ActsAceEtsComponentCommonAttrsUseSizeTypeTest",
        "ace_ets_component_common_attrss_useSizeType_nowear:ActsAceEtsComponentCommonAttrsUseSizeTypeNowearTest",
        "ace_ets_component_common_attrss_visibility:ActsAceEtsComponentCommonAttrsVisibilityTest",
        "ace_ets_component_common_attrss_width:ActsAceEtsComponentCommonAttrsWidthTest",
        "ace_ets_component_common_attrss_width_nowear:ActsAceEtsComponentCommonAttrsWidthNowearTest",
        "ace_ets_component_common_attrss_zIndex:ActsAceEtsComponentCommonAttrsZIndexTest",
        "ace_ets_component_common_attrss_zIndex_nowear:ActsAceEtsComponentCommonAttrsZIndexNowearTest",
        "ace_ets_component_common_attrss_margin_static:ActsAceEtsComponentCommonAttrsMarginStaticTest",
        "ace_ets_component_common_attrss_markAnchor_nowear_static:ActsAceEtsComponentCommonAttrsMarkAnchorNowearStaticTest",
        "ace_ets_component_common_attrss_markAnchor_static:ActsAceEtsComponentCommonAttrsMarkAnchorStaticTest",
        "ace_ets_component_common_attrss_offset_nowear_static:ActsAceEtsComponentCommonAttrsOffsetNowearStaticTest",
        "ace_ets_component_common_attrss_offset_static:ActsAceEtsComponentCommonAttrsOffsetStaticTest",
        "ace_ets_component_common_attrss_onAppear_static:ActsAceEtsComponentCommonAttrsOnAppearStaticTest",
        "ace_ets_component_common_attrss_onAppearNoWear_static:ActsAceEtsComponentCommonAttrsOnAppearNoWearStaticTest",
        "ace_ets_component_common_attrss_onAreaChange_static:ActsAceEtsComponentCommonAttrsOnAreaChangeStaticTest",
        "ace_ets_component_common_attrss_size_nowear_static:ActsAceEtsComponentCommonAttrsSizeNowearStaticTest",
        "ace_ets_component_common_attrss_size_static:ActsAceEtsComponentCommonAttrsSizeStaticTest",
        "ace_ets_component_common_attrss_stateStyles_nowear_static:ActsAceEtsComponentCommonAttrsStateStylesNowearStaticTest",
        "ace_ets_component_common_attrss_stateStyles_static:ActsAceEtsComponentCommonAttrsStateStylesStaticTest",
        "ace_ets_component_common_attrss_default_nowear_static:ActsAceEtsComponentCommonAttrsNoWearStaticTest",
        "ace_ets_component_common_attrss_defaultFocus_static:ActsAceEtsComponentCommonAttrsdefaultFocusStaticTest",
        "ace_ets_component_common_attrss_displayPriority_static:ActsAceEtsComponentCommondisplayPriorityStaticTest",
        "ace_ets_component_common_attrss_defaultFocusNoWear_static:ActsAceEtsComponentCommonAttrsdefaultFocusNoWearStaticTest",
        "ace_ets_component_common_attrss_enabled_static:ActsAceEtsComponentCommonenabledStaticTest",
        "ace_ets_component_common_attrss_flex_nowear_static:ActsAceEtsComponentCommonflexNowearStaticTest",
        "ace_ets_component_common_attrss_marginLength_nowear_static:ActsAceEtsComponentCommonAttrsMarginLengthNowearStaticTest",
        "ace_ets_component_common_attrss_alignRules_nowear_static:ActsAceEtsComponentCommonAttrsAlignRulesNowearStaticTest",
        "ace_ets_component_common_attrss_alignRules_static:ActsAceEtsComponentCommonAttrssAlignRulesStaticTest",
        "ace_ets_component_common_attrss_alignRules02_static:ActsAceEtsComponentCommonAttrsAlignRules02StaticTest",
        "ace_ets_component_common_attrss_aspectRatio_nowear_static:ActsAceEtsComponentCommonAttrsAspectRadioNowearStaticTest",
        "ace_ets_component_common_attrss_aspectRatio_static:ActsAceEtsComponentCommonAttrsAspectRadioStaticTest",
        "ace_ets_component_common_attrss_constraintSize_static:ActsAceEtsComponentCommonAttrsConstraintSizeStaticTest",
        "ace_ets_component_common_attrss_default_flex01_static:ActsAceEtsComponentCommonAttrsDefaultFlex1StaticTest",
        "ace_ets_component_common_attrss_default_flex02_static:ActsAceEtsComponentCommonAttrsDefaultFlex2StaticTest",
        "ace_ets_component_common_attrss_default_focusValue_static:ActsAceEtsComponentCommonAttrsDefaultFocusValueStaticTest",
        "ace_ets_component_common_attrss_default_static:ActsAceEtsComponentCommonAttrsDefaultStaticTest",
        "ace_ets_component_common_attrss_flex_three_nowear_static:ActsAceEtsComponentCommonflexThreeNowearStaticTest",
        "ace_ets_component_common_attrss_flex_three_static:ActsAceEtsComponentCommonflexThreeStaticTest",
        "ace_ets_component_common_attrss_flex_three01_static:ActsAceEtsComponentCommonflexThree01StaticTest",
        "ace_ets_component_common_attrss_flex_two_static:ActsAceEtsComponentCommonflexTwoStaticTest",
        "ace_ets_component_common_attrss_groupDefaultFocus_static:ActsAceEtsComponentCommonAttrsGroupDefaultFocusStaticTest",
        "ace_ets_component_common_attrss_height_nowear_static:ActsAceEtsComponentCommonAttrsHeightNowearStaticTest",
        "ace_ets_component_common_attrss_margin_nowear_static:ActsAceEtsComponentCommonAttrsMarginNowearStaticTest",
        "ace_ets_component_common_attrss_height_static:ActsAceEtsComponentCommonAttrsHeightStaticTest",
        "ace_ets_component_common_attrss_flex_two_nowear_static:ActsAceEtsComponentCommonflexTwoNowearStaticTest",
        "ace_ets_component_common_attrss_flex_two01_static:ActsAceEtsComponentCommonflexTwo01StaticTest",
        "ace_ets_component_common_attrss_flex001_static:ActsAceEtsComponentCommonflex001StaticTest",
        "ace_ets_component_common_attrss_hitTestBehavior_static:ActsAceEtsComponentCommonAttrsHitTestBehaviorStaticTest",
        "ace_ets_component_common_attrss_flex002_static:ActsAceEtsComponentCommonflex002StaticTest",
        "ace_ets_component_common_attrss_flex003_static:ActsAceEtsComponentCommonflex003StaticTest",
        "ace_ets_component_common_attrss_flex004_static:ActsAceEtsComponentCommonflex004StaticTest",
        "ace_ets_component_common_attrss_flex005_static:ActsAceEtsComponentCommonflex005StaticTest",
        "ace_ets_component_common_attrss_flex006_static:ActsAceEtsComponentCommonflex006StaticTest",
        "ace_ets_component_common_attrss_responseRegion_static:ActsAceEtsComponentCommonAttrsResponseRegionStaticTest",
        "ace_ets_component_common_attrss_focusable_static:ActsAceEtsComponentCommonfocusableStaticTest",
        "ace_ets_component_common_attrss_focusableDefault_static:ActsAceEtsComponentCommonAttrsFocusableDefaultStaticTest",
        "ace_ets_component_common_attrss_focusableNowear_static:ActsAceEtsComponentCommonfocusableNowearStaticTest",
        "ace_ets_component_common_attrss_focusControl_static:ActsAceEtsComponentCommonAttrsFocusControlStaticTest",
        "ace_ets_component_common_attrss_focusControlNowear_static:ActsAceEtsComponentCommonAttrsFocusControlNowearStaticTest",
        "ace_ets_component_common_attrss_focusOnTouch_static:ActsAceEtsComponentCommonAttrsFocusOnTouchStaticTest",
        "ace_ets_component_common_attrss_focusOnTouchNowear_static:ActsAceEtsComponentCommonAttrsFocusOnTouchNowearStaticTest",
        "ace_ets_component_common_attrss_layoutWeight_static:ActsAceEtsComponentCommonAttrsLayoutWeightStaticTest",
        "ace_ets_component_common_attrss_marginLength_static:ActsAceEtsComponentCommonAttrsMarginLengthStaticTest",
        "ace_ets_component_common_attrss_responseRegion02_static:ActsAceEtsComponentCommonAttrsResponseRegion02StaticTest",
        "ace_ets_component_common_attrss_responseRegion03_static:ActsAceEtsComponentCommonAttrsResponseRegion03StaticTest",
        "ace_ets_component_common_attrss_tabIndex_static:ActsAceEtsComponentCommonAttrsTabIndexStaticTest",
        "ace_ets_component_common_attrss_position_static:ActsAceEtsComponentCommonAttrsPositionStaticTest",
        "ace_ets_component_common_attrss_width_static:ActsAceEtsComponentCommonAttrsWidthStaticTest",
        "ace_ets_component_common_attrss_padding_static:ActsAceEtsComponentCommonAttrsPaddingStaticTest",
        "ace_ets_component_common_attrss_tabIndex_nowear_static:ActsAceEtsComponentCommonAttrsTabIndexNowearStaticTest",
        "ace_ets_component_common_attrss_position_nowear_static:ActsAceEtsComponentCommonAttrsPositionNowearStaticTest",
        "ace_ets_component_common_attrss_padding_nowear_static:ActsAceEtsComponentCommonAttrsPaddingNowearStaticTest",
        "ace_ets_component_common_attrss_touchable_static:ActsAceEtsComponentCommonAttrsTouchableStaticTest",
        "ace_ets_component_common_attrss_visibility_static:ActsAceEtsComponentCommonAttrsVisibilityStaticTest",
        "ace_ets_component_common_attrss_zIndex_static:ActsAceEtsComponentCommonAttrsZIndexStaticTest",
        "ace_ets_component_common_attrss_width_nowear_static:ActsAceEtsComponentCommonAttrsWidthNowearStaticTest",
        "ace_ets_component_common_attrss_onDisAppear_static:ActsAceEtsComponentCommonAttrsOnDisAppearStaticTest",
        "ace_ets_component_common_attrss_onVisibleAreaChange_static:ActsAceEtsComponentCommonAttrsOnVisibleAreaChangeStaticTest",
        "ace_ets_component_common_attrss_gridSpan_nowear_static:ActsAceEtsComponentCommonAttrsGridSpanNowearStaticTest",
        "ace_ets_component_common_attrss_layoutWeight_nowear_static:ActsAceEtsComponentCommonAttrsLayoutWeightNowearStaticTest",
        "ace_ets_component_common_attrss_onDisAppear_nowear_static:ActsAceEtsComponentCommonAttrsOnDisAppearNowearStaticTest",
        "ace_ets_component_common_attrss_zIndex_nowear_static:ActsAceEtsComponentCommonAttrsZIndexNowearStaticTest",
      ]
    }
  }
}
